# parking_optimization

./: .editorconfig  .env.sample  .gitignore  .pre-commit-config.yaml  Makefile  PROJECT_OVERVIEW.md  README.md  environment.yml  index.html  main.py  pyproject.toml
analysis/: __init__.py  complexity_analysis.py  map_visualizer.py  visualizer.py  viz_utils.py
core/: __init__.py  config.py  coordinator.py  demand_predictor.py  dynamic_pricing.py  exceptions.py  logger.py  map_data_loader.py  parking_zone.py  route_optimizer.py  run_manager.py  traffic_manager.py
core/map_services/: __init__.py  base.py  google_maps_service.py  mapquest_service.py  tomtom_service.py
docs/: API_SETUP_GUIDE.md  PRESENTATION_OUTLINE.md  PROJECT_REPORT_TEMPLATE.md
output/: README.md  latest
output/map_data/: downtown_boundary.geojson  grand_rapids_drive_network.graphml  parking_lots.geojson  parking_meters.geojson
output/runs/run_2025-06-10_18-11-34/: metadata.json
output/runs/run_2025-06-10_18-38-50/: metadata.json
output/runs/run_2025-06-10_19-15-34/: metadata.json
output/runs/run_2025-06-10_19-21-07/: metadata.json
output/runs/run_2025-06-10_19-22-23/: metadata.json
output/runs/run_2025-06-10_19-22-50/: metadata.json
output/runs/run_2025-06-10_19-26-45/: metadata.json
output/runs/run_2025-06-10_19-28-19/: metadata.json
output/runs/run_2025-06-10_19-29-01/: metadata.json
output/runs/run_2025-06-10_19-32-14/: metadata.json
output/runs/run_2025-06-10_19-34-10/: metadata.json
output/runs/run_2025-06-10_19-34-12/: metadata.json
output/runs/run_2025-06-10_22-20-30/: metadata.json
output/runs/run_2025-06-10_22-24-36/: metadata.json
output/runs/run_2025-06-10_22-30-21/: metadata.json
output/runs/run_2025-06-10_22-30-45/: metadata.json
output/runs/run_2025-06-10_22-37-13/: metadata.json
output/runs/run_2025-06-10_22-42-09/: metadata.json
output/runs/run_2025-06-10_23-55-26/: metadata.json
scripts/: README.md  calculate_map_tiles.py  debug_parking_system.py  fetch_grand_rapids_data.py  manage_runs.py  performance_profiler.py  setup.sh  test_api_usage.py
showcase/: README.md  check_sizes.sh
showcase/latest_run/: simulation_results.json
showcase/latest_run/selected_visuals/: interactive_parking_map.html
simulation/: __init__.py  city_simulator.py  driver_behavior.py
tests/: README.md  TESTING_GUIDE.md  test_algorithm_validation.py  test_apis.py  test_comprehensive.py  test_framework.py  test_system.py
tests/validation_data/: academic_validation_report.json
